--- a/Amazon_Product_Recommendation_System.ipynb
+++ b/Amazon_Product_Recommendation_System.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZXcaTxmcgIfh+AmILUuWi",
+      "authorship_tag": "ABX9TyOLl9owOLzdh401K38T3HPb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,31 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# 🛍️ **Amazon Product Recommendation System — Industry Case Study** 🛒"
+      ],
       "metadata": {
-        "id": "SYHqJ88YMtcI"
-      },
-      "outputs": [],
-      "source": []
+        "id": "kNnTmS8qQA3J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Problem statement 🎯"
+      ],
+      "metadata": {
+        "id": "c_NeYmdlQFm8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Build and evaluate a **hybrid recommendation engine** (content-based + collaborative filtering) for an **e-commerce platform** using product metadata and user behavior data. 🚀🤝💡"
+      ],
+      "metadata": {
+        "id": "wyIPRDieQKNd"
+      }
     }
   ]
 }
