--- a/Amazon_Product_Recommendation_System.ipynb
+++ b/Amazon_Product_Recommendation_System.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0+oVCWE+8psQILHiD29fa",
+      "authorship_tag": "ABX9TyPJp2TC9RqfmXb0ZdqDdW59",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,8 +59,32 @@
         "id": "8fa7af6b"
       },
       "source": [
-        "## Questions: 🤔"
+        "## Questions: 🤔\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Section A: Data Understanding & Cleaning 🧹📊\n",
+        "\n",
+        "**Objective:** Understand the dataset like a data scientist in a product analytics team.\n",
+        "\n",
+        "### Summarize the dataset:\n",
+        "*   Number of unique users, products, and reviews 🧑‍💻📦📝\n",
+        "*   Top 5 categories by number of products 🏆🛍️\n",
+        "*   Price range and discount insights 💲📉\n",
+        "\n",
+        "### Clean and preprocess the data:\n",
+        "*   Convert prices to numeric 🔢\n",
+        "*   Parse categories into hierarchy levels 🌳\n",
+        "*   Normalize rating scores and count outliers or Create derived features like price_difference, value_for_money_score, weighted ratings. ⭐💰💯\n",
+        "*   Handle missing values or anomalies 🤔❓\n",
+        "*   Remove duplicates, invalid records 🚫🚮\n",
+        "*   Handle missing ratings/reviews with appropriate strategy 👍👎"
+      ],
+      "metadata": {
+        "id": "05DzX_ooRYLy"
+      }
     }
   ]
 }
