--- a/Amazon_Product_Recommendation_System.ipynb
+++ b/Amazon_Product_Recommendation_System.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJp2TC9RqfmXb0ZdqDdW59",
+      "authorship_tag": "ABX9TyP8wFvKswJYRIuHycoo7VYH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,6 +85,25 @@
       "metadata": {
         "id": "05DzX_ooRYLy"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import libraries\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "from scipy import stats\n"
+      ],
+      "metadata": {
+        "id": "snf9UUkDSfnC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
